--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "angular-star-rating": "^6.0.0",
     "chart.js": "^3.1.1",
+    "firebase": "^10.4.0",
     "igniteui-webcomponents": "^4.4.0",
     "mdb-angular-ui-kit": "^5.0.0",
     "primeng": "^16.3.1",
